--- a/public/assets/css/home/sidebar.css
+++ b/public/assets/css/home/sidebar.css
@@ -38,21 +38,15 @@
     color: #333;
 }
 
-.sidebar .nav-link .feather {
-    margin-right: 4px;
-    color: #999;
-}
-
 .sidebar .nav-link.active {
     color: #007bff;
-}
-
-.sidebar .nav-link:hover .feather,
-.sidebar .nav-link.active .feather {
-    color: inherit;
 }
 
 .sidebar-heading {
     font-size: 0.75rem;
     text-transform: uppercase;
+}
+
+.sidebar .nav-link:hover {
+    cursor: pointer;
 }
